--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./static/lib/ayinfont/css/ayinfont.css">
     <link rel="stylesheet" href="./static/lib/carbon/carbon.min.css">
-    <title>techUI-Toolkit</title>
+    <title>TechUI-toolkit</title>
   </head>
   <body>
     <div id="app"></div>
